1.56
-----
Use new version of FrontPanel API. This comes in both x86 and x64 flavors,
so there are now two flavors of the Atticus binary.



1.57
-----

Code cleanup.
Renamed AtticusServerRuntime to AtticusServerCommunicator.
Created some subdirectories in DataStructures for organizational purposes.
Variety of small code changes, renames, deletions.

Fix to minor bugs regarding naming of default settings file in Cicero (inconsistent presence
or absence of the .set file extension). NOTE: You may need to copy your default settings file to SettingsData.set
when migrating from a previous version.


1.58
-----

(In progress) Integrating MySql database support for Cicero. (Run information can be exported to a MySql database?)