@@ -22,3 +22,6 @@ when migrating from a previous version.
 -----
 
 (In progress) Integrating MySql database support for Cicero. (Run information can be exported to a MySql database?)
+
+Recategorizing some Cicero Settings fields in the UI as part of the "Paris fork" (these are features that are unsupported and not well integrated,
+but left in for compatability purposes.
